# master-defense

./: .envrc  .gitignore  flake.nix  pyproject.toml
demo/accelerator-model/: fodo_twiss.py
demo/necktie-plot/: apace-necktie.py  elegant-necktie.py  twiss.ele
demo/optimizer/: bessy2_q5t2off.json  plot.py
