[tool.poetry]
name = "defense"
version = "0.1.0"
description = ""
authors = ["Felix Andreas <fandreas@physik.hu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.9"
apace = "^0.1.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
black = "^22.1.0"
ipython = "^8.0.1"
pylint = "^2.12.2"
rich = "^11.2.0"
eleganttools = { git = "https://github.com/nobeam/eleganttools.git", branch = "main" }
line-profiler = "3.3.1"
streamlit = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
